# katas

./: README.md
go/1_hello/: main.go
go/2_chars/: main.go
go/3_quotes/: main.go
python/: .gitignore  tip-calculator.py
python/2_chars/: README.rst
python/3_quotes/: AUTHORS  ChangeLog  README.rst  setup.cfg
python/3_quotes/kata/tests/: test_main.py
python/4_madlibs/kata/: main.py
python/4_madlibs/kata/tests/: test_main.py
python/5_simple_math/: .coveragerc  ChangeLog  MANIFEST  README.rst  requirements.txt  setup.cfg  tox.ini
python/5_simple_math/simple_math/: main.py
python/5_simple_math/simple_math/tests/: test_main.py
python/chars/: ChangeLog  README.md  README.rst  README.txt  requirements.txt  setup.cfg  setup.py  tox.ini
python/chars/kata/: main.py  test_main.py
python/chars/kata/tests/: test_main.py
python/hello/: .coveragerc  ChangeLog  MANIFEST  README.md  README.rst  setup.py  tox.ini
python/hello/kata/: hello.py  test_hello.py
python/hello/kata/tests/: test_hello.py
python/madlibs/: .coveragerc  ChangeLog  README.md  README.rst  setup.cfg  setup.py
python/madlibs/kata/: main.py  test_main.py
python/quote/: README.md  README.rst  setup.py  tox.ini
python/quote/kata/: main.py  test_main.py
python/template/: .coveragerc  .gitignore  ChangeLog  MANIFEST  README.md  setup.cfg  tox.ini  untemplate.sh
python/template/kata/: main.py
python/template/kata/tests/: test_main.py
