[metadata]
name = simple_math
version = 1.0
description = README.md
author = Brandon T. Fields
author_email = brandon@cdated.com
summary = Exercises
url = http://www.cdated.com
test-suite = simple_math.tests

[entry_points]
console_scripts =
    simple_math-template = simple_math.template:main

[files]
packages = simple_math

[flake8]
ignore = E402
exclude = tests
