[metadata]
name = kata
version = 1.0
description = README.md
author = Brandon T. Fields
author_email = brandon@cdated.com
summary = Exercises
url = http://www.cdated.com
test-suite = kata.tests

[entry_points]
console_scripts =
    kata-madlibs = kata.madlibs:main

[files]
packages = kata

[flake8]
ignore = E402
exclude = tests
